--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ addons:
 
 sudo: false
 
+env:
+  - GO111MODULE=on
+
 install:
   - go get -t -v ./...
   - go install -v github.com/mattn/go-sqlite3
