--- a/.codecov.yml
+++ b/.codecov.yml
@@ -8,9 +8,14 @@ coverage:
   range: "40...90"
 
   status:
-    project: yes
-    patch: yes
-    changes: no
+    project:
+      default:
+        target: 0%
+        threshold: 0%
+        if_ci_failed: error
+        only_pulls: true
+    patch: true
+    changes: false
 
 parsers:
   gcov:
@@ -23,4 +28,4 @@ parsers:
 comment:
   layout: "header, diff"
   behavior: default
-  require_changes: no
+  require_changes: false
